# dethumb

./: .gitignore  Cargo.toml  Makefile  README.md  desktop-thumbnailer.spec  desktop-thumbnailer.thumbnailer  dethumb.spec  dethumb.thumbnailer
.copr/: Makefile
docs/: exe-thumbnail-implementation-plan.md
packaging/usr/share/thumbnailers/: dethumb.thumbnailer
src/: icon_lookup.rs  lib.rs  main.rs
src/core/: icon_lookup.rs  mod.rs  path_safety.rs  thumbnail.rs
src/desktop/: icon_lookup.rs
src/exe/: cache.rs  detector.rs  error.rs  extractor.rs  mod.rs  pe.rs  telemetry.rs
src/exe/backends/: mod.rs  pe_resource.rs  windows_shell.rs
tests/: integration_workflow.rs
