[package]
name = "dethumb"
version = "0.2.10"
edition = "2024"

[dependencies]
freedesktop_entry_parser = "1.3"
freedesktop-icons = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
resvg = "0.45"
tiny-skia = "0.11"
usvg = "0.45"
thiserror = "2"
blake3 = "1"

[lints.rust]
unsafe_code = "forbid"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
similar_names = "allow"

[dev-dependencies]
tempfile = "3"
